[package]
name = "rust-adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
byteorder = "1.4"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
regex = "1.9"
once_cell = "1.18"
backoff = { version = "0.4", features = ["tokio"] }
indicatif = "0.17"